--- a/package.json
+++ b/package.json
@@ -6,9 +6,13 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
+    "konva": "^7.1.4",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
-    "react-scripts": "3.4.4"
+    "react-konva": "^17.0.0-0",
+    "react-scripts": "3.4.4",
+    "styled-components": "^5.2.1",
+    "use-image": "^1.0.6"
   },
   "scripts": {
     "start": "react-scripts start",
